--- a/main.css
+++ b/main.css
@@ -38,9 +38,9 @@ header h2 a {
 }
 
 .search {
-	position: absolute;
-	top: 75px;
-	left: 125px;
+	display: block;
+  margin-top: 75px;
+	margin-left: 117px;
 	font-size: 17px;
 	
 }
@@ -64,9 +64,9 @@ input[type="button"]{
 }
 
 .continue {
-	position: absolute;
-	top: 175px;
-	left: 128px;
+	display: block;
+	margin-top: 51px;
+	margin-left: 120px;
 }
 
 .continue ul {
@@ -87,12 +87,13 @@ input[type="button"]{
 
 .textbutton:hover {
 	text-decoration: underline;
+	cursor: pointer;
 }
 
 .list {
-	position: relative;
-	top: 270px;
-	left: 80px;
+	display: block;
+	margin-top: 70px;
+	margin-left: 80px;
 	font-size: 20px;
 }
 
